# DafuPlayer

./: settings.gradle
app/: build.gradle
playerlibrary/src/main/cpp/MediaPlayer/: CMakeLists.txt  test.cpp
playerlibrary/src/main/cpp/MediaPlayer/android/: CainMediaPlayer.cpp  CainMediaPlayer.h  JNIHelp.cpp  JNIHelp.h  com_cgfay_media_CainMediaPlayer.cpp
playerlibrary/src/main/cpp/MediaPlayer/source/common/: FFmpegUtils.cpp  FFmpegUtils.h
playerlibrary/src/main/cpp/MediaPlayer/source/convertor/: AudioResampler.cpp  AudioResampler.h
playerlibrary/src/main/cpp/MediaPlayer/source/decoder/: AudioDecoder.cpp  AudioDecoder.h  MediaDecoder.cpp  MediaDecoder.h  VideoDecoder.cpp  VideoDecoder.h
playerlibrary/src/main/cpp/MediaPlayer/source/device/: AudioDevice.cpp  AudioDevice.h  VideoDevice.cpp  VideoDevice.h
playerlibrary/src/main/cpp/MediaPlayer/source/device/android/: GLESDevice.cpp  GLESDevice.h  SLESDevice.cpp  SLESDevice.h
playerlibrary/src/main/cpp/MediaPlayer/source/player/: AVMessageQueue.cpp  AVMessageQueue.h  MediaPlayer.cpp  MediaPlayer.h  PlayerMessage.h  PlayerState.cpp  PlayerState.h
playerlibrary/src/main/cpp/MediaPlayer/source/queue/: FrameQueue.cpp  FrameQueue.h  PacketQueue.cpp  PacketQueue.h
playerlibrary/src/main/cpp/MediaPlayer/source/sync/: MediaClock.cpp  MediaClock.h  MediaSync.cpp  MediaSync.h
playerlibrary/src/main/cpp/Metadata/: CMakeLists.txt  MediaMetadataRetriever.cpp  MediaMetadataRetriever.h  MediaMetadataRetriver.cpp  MediaMetadataRetriver.h  Metadata.cpp  Metadata.h  com_cgfay_media_MediaMetadataRetriever.cpp
(+81 files in other folders)
